src/objects/Clinical_Apt_Calendar__c.object
<CustomObject>
    <description>to-dos: add link to patients plan of treatment apt,  add timestamp fields - patient arrived,started, doctor times, etc.  Possibly add link for assistant - might be a 1:m table though.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Clinical Apt Calendar</relationshipLabel>
        <relationshipName>Clinical_Apt_Calendar</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Amount_Financed__c</fullName>
        <formula>Patient_POT_Apt__r.Patient_POT__r.Opportunity__r.Amount_Financed__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount Financed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Anticipated_Payments__c</fullName>
        <formula>Patient_POT_Apt__r.Patient_POT__r.Opportunity__r.Anticipated_Payments__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Anticipated Payments</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apt_Complete_Time__c</fullName>
        <label>Apt Complete Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Apt_Date__c</fullName>
        <label>Apt Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apt_Datetime__c</fullName>
        <description>Copying the functionality from the Apt_Datetime field on the Consult_Inventory object.</description>
        <formula>/* copying the functionality from the Apt_Datetime field on the Consult_Inventory object. */ 

DATETIMEVALUE( TEXT(Apt_Date__c) &amp; &quot; &quot; &amp; TEXT(Start_Hour_Int__c) &amp; &quot;:&quot;&amp; if(len(Start_Minute__c)=1,&quot;0&quot; &amp; Start_Minute__c,Start_Minute__c) &amp; &quot;:00&quot;) + (7/24)</formula>
        <label>Apt Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Apt_Month__c</fullName>
        <formula>MONTH( Apt_Date__c )</formula>
        <label>Apt Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apt_Start_Time__c</fullName>
        <label>Apt Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Apt_Status__c</fullName>
        <label>Apt Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>No Show</fullName>
                </value>
                <value>
                    <fullName>Patient Left</fullName>
                </value>
                <value>
                    <fullName>Patient Arrived</fullName>
                </value>
                <value>
                    <fullName>Patient Ready</fullName>
                </value>
                <value>
                    <fullName>Appointment Started</fullName>
                </value>
                <value>
                    <fullName>Incomplete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Arrival_Time__c</fullName>
        <label>Arrival Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CR_Schedule_Block__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CR Schedule Block</label>
        <referenceTo>CR_Schedule_Block__c</referenceTo>
        <relationshipLabel>Clinical Apt Calendar</relationshipLabel>
        <relationshipName>Clinical_Apt_Calendar</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Clinical_Appointment_Arch_Count__c</fullName>
        <description>This field rolls up the Arch Count from the Clinical Appointment Record, so that it can be SUM in Salesforce Reports.</description>
        <formula>Patient_POT_Apt__r.Clinical_Appointment__r.Arch_Count__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Clinical Appointment Arch Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Clinical_Room__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Clinical Room</label>
        <referenceTo>Clinical_Room__c</referenceTo>
        <relationshipLabel>Clinical Apt Calendar</relationshipLabel>
        <relationshipName>Clinical_Apt_Calendar</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Confirmation_Status__c</fullName>
        <label>Confirmation Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Confirmed</fullName>
                    <default>true</default>
                    <label>Not Confirmed</label>
                </value>
                <value>
                    <fullName>Confirmed</fullName>
                </value>
                <value>
                    <fullName>Left Message</fullName>
                </value>
                <value>
                    <fullName>Can&apos;t Reach</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DOW__c</fullName>
        <label>DOW</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Doctor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Doctor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Clinical_Apt_Calendar</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Hour_Int__c</fullName>
        <formula>value(End_Hour__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End Hour Int</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_Hour__c</fullName>
        <label>End Hour</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Minute_Int__c</fullName>
        <formula>value(End_Minute__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End Minute Int</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_Minute__c</fullName>
        <label>End Minute</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Etime__c</fullName>
        <formula>(value(End_Hour__c) * 60) + value(End_Minute__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Etime</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Financed__c</fullName>
        <formula>Patient_POT_Apt__r.Patient_POT__r.Opportunity__r.Finance_Company_Fee__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Finance Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Negotiated_Total_Amount__c</fullName>
        <formula>Patient_POT_Apt__r.Patient_POT__r.Opportunity__r.Negotiated_Total_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Negotiated Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Clinical Apt Calendar</relationshipLabel>
        <relationshipName>Clinical_Apt_Calendar</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Outstanding_Payments_Minus_Anticipated__c</fullName>
        <formula>Patient_POT_Apt__r.Patient_POT__r.Opportunity__r.Outstanding_Balance_incl_anticipated__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Outstanding Payments- Minus Anticipated</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Patient_Left_Time__c</fullName>
        <label>Patient Left Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Patient_POT_Apt__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to the POT apt that was scheduled</description>
        <label>Patient POT Apt</label>
        <referenceTo>Patient_POT_Apt__c</referenceTo>
        <relationshipLabel>Clinical Apt Calendar</relationshipLabel>
        <relationshipName>Clinical_Apt_Calendar</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Plan_of_Treatment__c</fullName>
        <formula>Patient_POT_Apt__r.Patient_POT__r.Plan_of_Treatment__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Plan of Treatment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ready_Time__c</fullName>
        <label>Ready Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Start_Hour_Int__c</fullName>
        <formula>value(Start_Hour__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start Hour Int</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Hour__c</fullName>
        <label>Start Hour</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Minute_Int__c</fullName>
        <formula>value(Start_Minute__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start Minute Int</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Minute__c</fullName>
        <label>Start Minute</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Updates__c</fullName>
        <label>Status Updates</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Stime__c</fullName>
        <formula>(value(Start_Hour__c) * 60) + value(Start_Minute__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stime</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Payments__c</fullName>
        <formula>Patient_POT_Apt__r.Patient_POT__r.Opportunity__r.Total_Payments__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Payments</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>isDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isDeleted</label>
        <type>Checkbox</type>
    </fields>
    <label>Clinical Apt Calendar</label>
    <nameField>
        <displayFormat>CAC-{0000}</displayFormat>
        <label>Clinical Apt Calendar Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Clinical Apt Calendar</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>